markup extension css and repo github link added

--- a/public/StandardExtensions/config.json
+++ b/public/StandardExtensions/config.json
@@ -4,9 +4,9 @@
             "name":"IconMarkupExtension",
             "options":{
                 "icons": [
-                    { "dbId": 920,   "label": "300&#176;C", "css": "fas fa-thermometer-full" },
-                    { "dbId": 915,    "label": "356&#176;C", "css": "fas fa-thermometer-full" },
-                    { "dbId": 1626,  "label": "450&#176;C", "css": "fas fa-thermometer-empty" }
+                    { "dbId": 920,   "label": "300&#176;C", "css": "temperatureHigh fas fa-thermometer-full" },
+                    { "dbId": 915,    "label": "356&#176;C", "css": "temperatureBorder temperatureHigh fas fa-thermometer-full" },
+                    { "dbId": 1626,  "label": "450&#176;C", "css": "temperatureBorder temperatureOk fas fa-thermometer-empty" }
                 ],
                 "button": {
                     "icon": "fa-thermometer-half",
