--- a/public/StandardExtensions/CameraRotation/config.json
+++ b/public/StandardExtensions/CameraRotation/config.json
@@ -1,4 +1,12 @@
 {
     "name":"CameraRotation",
-    "Loadonstartup": "false"
+    "displayname": "Camera Rotation",
+    "description":"Rotates the model continously untill stopped, can be used for demoing a large model.",
+    "options":{},
+    "loadonstartup": "false",
+    "filestoload":{
+        "cssfiles":["main.css"],
+        "jsfiles":["main.js"]
+    },
+    "includeinlist":"true"
 }
