--- a/public/StandardExtensions/HandleSelectionExtension/config.json
+++ b/public/StandardExtensions/HandleSelectionExtension/config.json
@@ -1,4 +1,12 @@
 {
     "name":"HandleSelectionExtension",
-    "Loadonstartup": "false"
+    "displayname": "Handle Selection",
+    "description":"A demo extension which showcases getting info about a selected object, select the object/element and click on the toolbar icon to view the info of that element.",
+    "options":{},
+    "loadonstartup": "false",
+    "filestoload":{
+        "cssfiles":["main.css"],
+        "jsfiles":["main.js"]
+    },
+    "includeinlist":"true"
 }
