--- a/public/StandardExtensions/IconMarkupExtension/config.json
+++ b/public/StandardExtensions/IconMarkupExtension/config.json
@@ -1,4 +1,23 @@
 {
     "name":"IconMarkupExtension",
-    "Loadonstartup": "false"
+    "displayname": "Icon Markups",
+    "description": "Markups example, bases on options provided in config, info is showed on particular object referring dbid.",
+    "options":{
+        "icons": [
+            { "dbId": 920,   "label": "300&#176;C", "css": "temperatureHigh fas fa-thermometer-full" },
+            { "dbId": 915,    "label": "356&#176;C", "css": "temperatureBorder temperatureHigh fas fa-thermometer-full" },
+            { "dbId": 1626,  "label": "450&#176;C", "css": "temperatureBorder temperatureOk fas fa-thermometer-empty" }
+        ],
+        "button": {
+            "icon": "fa-thermometer-half",
+            "tooltip": "Show Temperature"
+        }
+    },
+    "viewerversion":"7.x",
+    "loadonstartup": "false",
+    "filestoload":{
+        "cssfiles":["main.css"],
+        "jsfiles":["main.js"]
+    },
+    "includeinlist":"true"
 }
