--- a/public/StandardExtensions/config.json
+++ b/public/StandardExtensions/config.json
@@ -3,7 +3,7 @@
         {
             "name":"IconMarkupExtension",
             "displayname": "Icon Markups",
-            "description": "Markups example, bases on options provided in config, info is showed on particular object referring dbid. Details: https://forge.autodesk.com/blog/placing-custom-markup-dbid",
+            "description": "Markups example, based on options provided in config, info is showed on particular object referring dbid.",
             "options":{
                 "icons": [
                     { "dbId": 920,   "label": "300&#176;C", "css": "temperatureHigh fas fa-thermometer-full" },
@@ -21,6 +21,7 @@
                 "cssfiles":["main.css"],
                 "jsfiles":["main.js"]
             },
+            "bloglink":"https://forge.autodesk.com/blog/placing-custom-markup-dbid",
             "includeinlist":"true"
         },
         {
