configs updated, minor UI improvements and EULA added

--- a/public/StandardExtensions/BasicSkeleton/config.json
+++ b/public/StandardExtensions/BasicSkeleton/config.json
@@ -3,7 +3,7 @@
     "displayname": "Basic Skeleton",
     "description": "Basic Skeleton of an extension, can be used as boilerplate code.",
     "options":{},
-    "viewerversion":"7.x",
+    "viewerversion":"7.*",
     "loadonstartup": "false",
     "filestoload":{
         "cssfiles":["main.css"],
