minor project details update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "standardextensions",
+  "name": "forgeextensions",
   "version": "1.0.0",
   "description": "Sample application for learnforge.autodesk.io.",
   "main": "start.js",
