Added experimental NestedViewerExtension.

--- a/public/extensions/config.json
+++ b/public/extensions/config.json
@@ -125,6 +125,19 @@
                 "jsfiles":["main.js"]
             },
             "includeinlist":"true"
+        },
+        {
+            "name": "NestedViewerExtension",
+            "displayname": "Viewer in Viewer",
+            "description": "Extension providing a panel with another viewer.",
+            "options": {},
+            "viewerversion": "7.*",
+            "loadonstartup": "false",
+            "filestoload": {
+                "cssfiles": ["main.css"],
+                "jsfiles": ["main.js"]
+            },
+            "includeinlist": "true"
         }
     ],
     "ListConfig":{
