issue 12 fixed and minor improvements

--- a/public/extensions/config.json
+++ b/public/extensions/config.json
@@ -97,7 +97,7 @@
             "options":{},
             "loadonstartup": "false",
             "filestoload":{
-                "cssfiles":[],
+                "cssfiles":["main.css"],
                 "jsfiles":["main.js"]
             },
             "includeinlist":"true"
