--- a/public/extensions/TransformationExtension/config.json
+++ b/public/extensions/TransformationExtension/config.json
@@ -5,7 +5,7 @@
     "options":{},
     "loadonstartup": "false",
     "filestoload":{
-        "cssfiles":[],
+        "cssfiles":["main.css"],
         "jsfiles":["main.js"]
     },
     "includeinlist":"true"
