--- a/public/extensions/config.json
+++ b/public/extensions/config.json
@@ -1,184 +1,152 @@
 {
-    "Extensions":[
-        {
-            "name":"IconMarkupExtension",
-            "displayname": "Icon Markups",
-            "description": "Markups example, based on options provided in config, info is showed on particular object referring dbid.",
-            "options":{
-                "icons": [
-                    { "dbId": 920,   "label": "26&#176;C", "css": "temperatureHigh fas fa-thermometer-full" },
-                    { "dbId": 915,    "label": "30&#176;C", "css": "temperatureBorder temperatureHigh fas fa-thermometer-full" },
-                    { "dbId": 1626,  "label": "40&#176;C", "css": "temperatureBorder temperatureOk fas fa-thermometer-empty" }
-                ],
-                "button": {
-                    "icon": "fa-thermometer-half",
-                    "tooltip": "Show Temperature"
-                }
-            },
-            "viewerversion":"7.*",
-            "loadonstartup": "false",
-            "filestoload":{
-                "cssfiles":["main.css"],
-                "jsfiles":["main.js"]
-            },
-            "bloglink":"https://forge.autodesk.com/blog/placing-custom-markup-dbid",
-            "includeinlist":"true"
-        },
-        {
-            "name":"IssuesExtension",
-            "displayname": "Issues",
-            "description": "WIP",
-            "options":{
-                "issues": [
-                    {"_id":"5e20652936692809cc0fd279","createdAt":"2020-01-16T13:29:13.242Z","partId":920,"author":"Sherbaum Valery","text":"Minor","__v":0},{"_id":"5e2065ea36692809cc0fd27a","createdAt":"2020-01-16T13:32:26.252Z","partId":915,"author":"John Golley","text":"Urgent","__v":0},{"_id":"5e233abc36692809cc0fd27f","createdAt":"2020-01-18T17:05:00.737Z","partId":1626,"author":"Sherbaum Valery","text":"Major","__v":0}
-                ]
-            },
-            "viewerversion":"7.*",
-            "loadonstartup": "false",
-            "filestoload":{
-                "cssfiles":["main.css"],
-                "jsfiles":["main.js"]
-            },
-            "includeinlist":"false"
-        },
-        {
-            "name":"BasicSkeleton",
-            "displayname": "Basic Skeleton",
-            "description": "Basic Skeleton of an extension, can be used as boilerplate code.",
-            "options":{},
-            "viewerversion":"7.*",
-            "loadonstartup": "false",
-            "filestoload":{
-                "cssfiles":["main.css"],
-                "jsfiles":["main.js"]
-            },
-            "includeinlist":"true"
-        },
-        {
-            "name":"HandleSelectionExtension",
-            "displayname": "Handle Selection",
-            "description":"A demo extension which showcases getting info about a selected object, select the object/element and click on the toolbar icon to view the info of that element.",
-            "options":{},
-            "loadonstartup": "false",
-            "filestoload":{
-                "cssfiles":["main.css"],
-                "jsfiles":["main.js"]
-            },
-            "includeinlist":"true"
-        },
-        {
-            "name":"ModelSummaryExtension",
-            "displayname": "Model Summary",
-            "description":"Also a demo extension to view model summary.",
-            "options":{},
-            "loadonstartup": "false",
-            "filestoload":{
-                "cssfiles":["main.css"],
-                "jsfiles":["main.js"]
-            },
-            "includeinlist":"true"
-        },
-        {
-            "name":"CameraRotation",
-            "displayname": "Camera Rotation",
-            "description":"Rotates the model continously untill stopped, can be used for demoing a large model.",
-            "options":{},
-            "loadonstartup": "false",
-            "filestoload":{
-                "cssfiles":["main.css"],
-                "jsfiles":["main.js"]
-            },
-            "includeinlist":"true"
-        },
-        {
-            "name":"TransformationExtension",
-            "displayname": "Transformation",
-            "description":"Pupose of this extension is to select an element and move or transform it in any direction.",
-            "options":{},
-            "loadonstartup": "false",
-            "filestoload":{
-                "cssfiles":["main.css"],
-                "jsfiles":["main.js"]
-            },
-            "includeinlist":"true"
-        },
-        {
-            "name":"TranslateExtension",
-            "displayname": "Translate",
-            "description":"Gets the co-ordinates info of a select object.",
-            "options":{},
-            "loadonstartup": "false",
-            "filestoload":{
-                "cssfiles":[],
-                "jsfiles":["main.js"]
-            },
-            "includeinlist":"true"
-        },
-        {
-            "name":"viewerResizerExtension",
-            "displayname": "Viewer Resizer",
-            "description":"Used for resizing viewer.",
-            "options":{},
-            "loadonstartup": "false",
-            "filestoload":{
-                "cssfiles":[],
-                "jsfiles":["main.js"]
-            },
-            "includeinlist":"true"
-        },
-        {
-            "name": "NestedViewerExtension",
-            "displayname": "Viewer in Viewer",
-            "description": "Extension providing a panel with another viewer.",
-            "options": {},
-            "viewerversion": "7.*",
-            "loadonstartup": "false",
-            "filestoload": {
-                "cssfiles": ["main.css"],
-                "jsfiles": ["main.js"]
-            },
-            "includeinlist": "true"
-        }
+    "Extensions": [],
+    "ListConfig": {
+      "CreateList": "true",
+      "ListId": "extensionlist"
+    },
+    "InbuiltExtensions": [
+      {
+        "name": "Autodesk.Fusion360.Animation",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.Section",
+        "default": "true"
+      },
+      {
+        "name": "Autodesk.DefaultTools.NavTools",
+        "default": "true"
+      },
+      {
+        "name": "Autodesk.Hyperlink",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.Measure",
+        "default": "true"
+      },
+      {
+        "name": "Autodesk.Viewing.FusionOrbit",
+        "default": "false"
+      },
+      {
+        "name": "Autodesk.BimWalk",
+        "default": "true"
+      },
+      {
+        "name": "Autodesk.GoHome",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.Explode",
+        "default": "true"
+      },
+      {
+        "name": "Autodesk.FullScreen",
+        "default": "true"
+      },
+      {
+        "name": "Autodesk.LayerManager",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.ModelStructure",
+        "default": "true"
+      },
+      {
+        "name": "Autodesk.PropertiesManager",
+        "default": "true"
+      },
+      {
+        "name": "Autodesk.ViewerSettings",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.Viewing.Wireframes",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.Viewing.ZoomWindow",
+        "default": "false"
+      },
+      {
+        "name": "Autodesk.SplitScreen",
+        "default": "false"
+      },
+      {
+        "name": "Autodesk.PDF",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.DocumentBrowser",
+        "default": "false"
+      },
+      {
+        "name": "Autodesk.Geolocation",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.CrossFadeEffects",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.Edit2D",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.ViewCubeUi",
+        "default": "true"
+      },
+      {
+        "name": "Autodesk.BIM360.Minimap",
+        "default": "false"
+      },
+      {
+        "name": "Autodesk.BIM360.GestureDocumentNavigation",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.BIM360.RollCamera",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.Viewing.SceneBuilder",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.Snapping",
+        "default": "false"
+      },
+      {
+        "name": "Autodesk.Viewing.Popout",
+        "default": "false",
+        "includeinlist": "false"
+      },
+      {
+        "name": "Autodesk.VisualClusters",
+        "default": "false"
+      },
+      {
+        "name": "Autodesk.AEC.LevelsExtension",
+        "default": "false",
+        "includeinlist": "false"
+      }
     ],
-    "ListConfig":{
-    "CreateList":"true",
-    "ListId":"extensionlist"
-    },    
-    "InbuiltExtensions":[
-        {"name":"Autodesk.Fusion360.Animation","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.Section","default":"true"},
-        {"name":"Autodesk.DefaultTools.NavTools","default":"true"},
-        {"name":"Autodesk.Hyperlink","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.Measure","default":"true"},
-        {"name":"Autodesk.Viewing.FusionOrbit","default":"false"},
-        {"name":"Autodesk.BimWalk","default":"true"},
-        {"name":"Autodesk.GoHome","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.Explode","default":"true"},
-        {"name":"Autodesk.FullScreen","default":"true"},
-        {"name":"Autodesk.LayerManager","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.ModelStructure","default":"true"},
-        {"name":"Autodesk.PropertiesManager","default":"true"},
-        {"name":"Autodesk.ViewerSettings","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.Viewing.Wireframes","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.Viewing.ZoomWindow","default":"false"},
-        {"name":"Autodesk.SplitScreen","default":"false"},
-        {"name":"Autodesk.PDF","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.DocumentBrowser","default":"false"},
-        {"name":"Autodesk.Geolocation","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.CrossFadeEffects","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.Edit2D","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.ViewCubeUi","default":"true"},
-        {"name":"Autodesk.BIM360.Minimap","default":"false"},
-        {"name":"Autodesk.BIM360.GestureDocumentNavigation","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.BIM360.RollCamera","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.Viewing.SceneBuilder","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.Snapping","default":"false"},
-        {"name":"Autodesk.Viewing.Popout","default":"false","includeinlist":"false"},
-        {"name":"Autodesk.VisualClusters","default":"false"},
-        {"name":"Autodesk.AEC.LevelsExtension","default":"false","includeinlist":"false"}
-    ],
-    "InbuiltExtensionsConfig":{
-    "CreateList":"true",
-    "ListId":"inbuiltextensionlist"
-    }           
-}
+    "InbuiltExtensionsConfig": {
+      "CreateList": "true",
+      "ListId": "inbuiltextensionlist"
+    }
+  }
