--- a/public/extensions/NestedViewerExtension/config.json
+++ b/public/extensions/NestedViewerExtension/config.json
@@ -9,5 +9,6 @@
         "cssfiles": ["main.css"],
         "jsfiles": ["main.js"]
     },
+    "gif": "extension.gif",
     "includeinlist": "true"
 }
