--- a/public/extensions/IconMarkupExtension/config.json
+++ b/public/extensions/IconMarkupExtension/config.json
@@ -4,13 +4,16 @@
     "description": "Markups example, based on options provided in config, info is showed on particular object referring dbid.",
     "options":{
         "icons": [
-            { "dbId": 9256,   "label": "300&#176;C", "css": "fas fa-thermometer-full" }
+            { "dbId": 9256,   "label": "30&#176;C", "css": "fas fa-thermometer-full" },
+                { "dbId": 920,    "label": "35&#176;C", "css": "fas fa-thermometer-full" },
+                { "dbId": 1626,  "label": "45&#176;C", "css": "fas fa-thermometer-empty" }
         ],
         "button": {
             "icon": "fa-thermometer-half",
             "tooltip": "Show Temperature"
         }
     },
+    "editoptions":"true",
     "viewerversion":"7.*",
     "loadonstartup": "false",
     "filestoload":{
