--- a/public/extensions/GoogleMapsLocator/config.json
+++ b/public/extensions/GoogleMapsLocator/config.json
@@ -13,6 +13,7 @@
     "includeinlist":"true",
     "gif": "extension.gif",
     "externaldependencies":[
-        {"type": "css", "link": "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"}
+        {"type": "css", "link": "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css"},
+        {"type": "js", "link": "https://maps.googleapis.com/maps/api/js?key=<Google Maps API Key>"}
     ]
 }
