--- a/public/extensions/AecGridsExtension/config.json
+++ b/public/extensions/AecGridsExtension/config.json
@@ -2,7 +2,10 @@
     "name": "AecGridsExtension",
     "displayname": "AEC Grids",
     "description": "A Forge Viewer extension for loading and rendering Revit Grids by AEC Model Data",
-    "options": {},
+    "options": {
+        "alertOnDefaultFailure": true,
+        "autoUnloadOnNoAecModelData": true
+    },
     "viewerversion": "7.*",
     "loadonstartup": "false",
     "filestoload": {
