Update AecGridsExtension's README.md, config.js and fix typo. Also, now it will check/uncheck extension's checkbox when loading/unloading extensions by typing commands in the console.

--- a/public/extensions/AecGridsExtension/config.json
+++ b/public/extensions/AecGridsExtension/config.json
@@ -6,6 +6,7 @@
         "alertOnDefaultFailure": true,
         "autoUnloadOnNoAecModelData": true
     },
+    "editoptions":"true",
     "viewerversion": "7.*",
     "loadonstartup": "false",
     "filestoload": {
