--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "license": "MIT",
   "dependencies": {
-    "express": "^4.16.3",
-    "forge-apis": "^0.4.3",
-    "multer": "^1.3.1"
+    "express": "^4.18.1",
+    "express-formidable": "^1.2.0",
+    "forge-apis": "^0.9.2",
+    "formidable": "^2.0.1"
   }
 }
